--- a/index.html
+++ b/index.html
@@ -8,9 +8,29 @@
 </head>
 <body>
     <header>
-        
-
+        <h3 id="textHeader"> 20% PAGOS EN EFECTIVO</h3>
     </header>
+    <nav>
+        <img src="assets/img/logo.jpg" alt="logo matesdeuruguay" id="imglogo">
+        <div>
+           <ul id="listaNav">
+                <li>
+                    <a href="PRODUCTOS">PRODUCTOS</a>
+                </li>
+                <li>
+                    <a href="CONTACTO">CONTACTO</a>
+                </li>
+                <li>
+                    <a href="REDES SOCIALES">REDES SOCIALES</a>
+                </li>
+           </ul>
+        </div>
+        <div>
+            <li>barra</li>
+            <li>user</li>
+            <li>carro</li>
+        </div>
+    </nav>
 
 
 
