--- a/index.html
+++ b/index.html
@@ -48,17 +48,53 @@
     </header>
 
     <main>
-        <div id="divPresentacion">
-            <h1>Somos Mates de uruguay
-            </h1>
-            <h2>Hacemos mates artesanales a la medida del cliente, tenemos lo que buscas y mucho mas!
-            </h2>
-            <h3>
-                Somos fabricantes de un amplio catalogo de productos!
-            </h3>
-        </div>
-        <div id="divDestacados">
+        <div class="container">
+            <div>
+                <img src="assets/img/bannerphone.png" alt="presentacion" id="imgBanner">
+            </div>
+            <div id="divPresentacion">
+                <h1>
+                    Somos Mates de uruguay
+                </h1>
+                <h3>
+                    Somos fabricantes de nuestros mates, hacemos mates a la medida del cliente. Tenemos lo que buscas!
+                    <span>Llegamos a todo el mundo!</span>
+                </h3>
+            </div>
+            <div id="divDestacados">
+                
 
+                <div class="productos">
+                    <img src="assets/img/cinceladoallacre.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate imperial Cincelado al lacre</span>
+                    <span class="precio">$70 USD</span>
+                </div>
+                <div class="productos">
+                    <img src="assets/img/impecrudo.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate imprerial con posa mate, en cuero crudo</span>
+                    <span class="precio">$75 USD</span>
+                </div>
+                <div class="productos">
+                    <img src="assets/img/matepersonalizado.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate imperial personalizado</span>
+                    <span class="precio">$50 USD (consultar personalizado)</span>
+                </div>
+                <div class="productos">
+                    <img src="assets/img/imperialpersonalizado.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate imperial personalizado, en cuero crudo</span>
+                    <span class="precio">$75 USD (consultar personalizado)</span>
+                </div>
+                <div class="productos">
+                    <img src="assets/img/torpedocincelado.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate torpedo cincelado al lacre</span>
+                    <span class="precio">$65 USD</span>
+                </div>
+                <div class="productos">
+                    <img src="assets/img/imperialcincelado.jpg" alt="" class="imgProd">
+                    <span class="tituProd">Mate imperial cincelado en alplaca</span>
+                    <span class="precio">$50 USD</span>
+                </div>
+            </div>
         </div>
     </main>
 
