--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <img src="assets/img/logo.jpg" alt="logo matesdeuruguay" id="imgLogo">
         <button id="iconHamb" >
-            <i class="bi bi-list"></i>
+            <i class="bi bi-list">MENU</i>
         </button>
         <nav id="navContainer">
             <button id="closeNav">
@@ -62,37 +62,62 @@
                 </h3>
             </div>
             <div id="divDestacados">
-                
+                <div id="categorias">
+                    <button class="categoria">Mates</button>
+                    <button class="categoria">Bombillas</button>
+                    <button class="categoria">Termos</button>
+                    <button class="categoria">Canastas</button>
+                    <button class="categoria">Yerberas</button>
+                    <button class="categoria">Apliques</button>
+                </div>
 
                 <div class="productos">
                     <img src="assets/img/cinceladoallacre.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate imperial Cincelado al lacre</span>
                     <span class="precio">$70 USD</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
                 <div class="productos">
                     <img src="assets/img/impecrudo.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate imprerial con posa mate, en cuero crudo</span>
                     <span class="precio">$75 USD</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
                 <div class="productos">
                     <img src="assets/img/matepersonalizado.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate imperial personalizado</span>
                     <span class="precio">$50 USD (consultar personalizado)</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
                 <div class="productos">
                     <img src="assets/img/imperialpersonalizado.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate imperial personalizado, en cuero crudo</span>
                     <span class="precio">$75 USD (consultar personalizado)</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
                 <div class="productos">
                     <img src="assets/img/torpedocincelado.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate torpedo cincelado al lacre</span>
                     <span class="precio">$65 USD</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
                 <div class="productos">
                     <img src="assets/img/imperialcincelado.jpg" alt="" class="imgProd">
                     <span class="tituProd">Mate imperial cincelado en alplaca</span>
                     <span class="precio">$50 USD</span>
+                    <button class="comprar">
+                        Comprar producto
+                    </button>
                 </div>
             </div>
         </div>
