--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Mates de Urugay</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 
 <body>
@@ -120,11 +120,40 @@
                     </button>
                 </div>
             </div>
+
+                <div id="fotosCarousel" class="carousel slide carousel-fade">
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="assets/img/matepersonalizado.jpg" class="d-block w-100" id="imgcar" alt="...">
+                        <div class="carousel-caption top-0 mt-4">
+                            <p class="mt-5 fs-3 text-uppercase fw-bolder">
+                                Los mates de nuestros clientes!
+                            </p>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/cinceladoallacre.jpg" class="d-block w-100" id="imgcar" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="assets/img/imperialcincelado.jpg" class="d-block w-100" id="imgcar" alt="...">
+                      </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#fotosCarousel" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#fotosCarousel" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                  </div>
+            
         </div>
     </main>
 
 
     <script src="mates.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
 </html>
